@@ -239,7 +239,7 @@ public final class WorldgenConfig { // TODO: Consider adjusting gen values for n
   }
 
   private static final ForgeConfigSpec.IntValue worldgen(final ForgeConfigSpec.Builder builder, final String name, final int default_value){
-    return builder.defineInRange(name, default_value, WorldConstants.min_y_level, WorldConstants.world_height - 1);
+    return builder.defineInRange(name, default_value, WorldConstants.bottom_level, WorldConstants.world_height - 1);
   }
 
   private static final ForgeConfigSpec.IntValue tries(final ForgeConfigSpec.Builder builder, final int default_value){
